# polyphony

./: .gitignore  .rusty-hook.toml  Cargo.toml  README.md  package.json
.github/workflows/: rust.yml
crates/polyphony-tauri/: Cargo.toml  build.rs  tauri.conf.json
crates/polyphony-tauri/src/: lib.rs  main.rs
crates/polyphony-wasm/: .gitignore  Cargo.toml  index.html  tailwind.config.js
crates/polyphony-wasm/src/: main.rs  stores.rs
crates/polyphony-wasm/src/app/: login.rs  mod.rs  register.rs
src/: App.svelte  main.rs
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/crates/serenity-0.11.5/: README.md
src-tauri/crates/serenity-0.11.5/src/http/: client.rs
src-tauri/src/: auth.rs  backend.rs  backendfactory.rs  classes.rs  instance.rs  main.rs  serenity.rs  user.rs
src-tauri/src/backend/: backend.rs  mod.rs  spacebar.rs
src/message/: dashboard.rs  login.rs  welcome.rs
src/screen/: dashboard.rs  login.rs  mod.rs  welcome.rs
