[package]
name = "polyphony"
version = "0.0.1"
description = "A Tauri App"
authors = ["bitfl0wer"]
license = "GPL-3"
repository = ""
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.2", features = [] }

[dependencies]
tauri = { version = "1.2", features = ["shell-open"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
diesel = {version = "2.0.3", features = ["postgres"] }
dotenvy = "0.15.6"
tokio = "1.26.0"
serenity = { git = "https://github.com/polyphony-chat/serenity.git" }
reqwest = "0.11.15"
async-trait = "0.1.68"
tokio-tungstenite = "0.18.0"
url = "2.3.1"

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
